# xflow

./: .gitignore  .gitmodules  CMakeLists.txt  Makefile  README.md  dump.sh  hosts  merge_pctr_data.sh  run_oprofile_cmd.sh  run_ps_dist.sh  run_ps_local.sh  run_ps_local_cmd.sh  run_ps_mpi_cmd.sh  scp_pctr.sh  stop.sh
auc_evaluation/: Makefile  README.md  hosts  run.sh
auc_evaluation/data/: run_split_data.sh  split_data.py
auc_evaluation/src/: auc_cal.h  load_data.h  main.cpp
data/: ffm_run_split_data.sh  ffm_test-00002  ffm_train-00001  lr_run_split_data.sh  lr_test-00001  lr_train-00002  run_split_data.sh  small_test-00000  small_train-00002
dmlc-core/make/: config.mk
ps-lite/: CMakeLists.txt
ps-lite/guide/: network_perf.cc  ps_guide.mk
ps-lite/make/: config.mk  deps.mk
ps-lite/src/: ps_main.cc
scripts/: cmd_run_scheduler.sh  cmd_run_server.sh  cmd_run_worker.sh  dump.sh  run_ps_local.sh  run_ps_local_cmd.sh  run_ps_mpi_cmd.sh  run_scheduler.sh  run_server.sh  start_scheduler.sh  start_server.sh  start_worker.sh  stop.sh
src/: .worker.h.swp  CMakeLists.txt  dump.cc  dump.cpp  ffm_worker.h  fm_worker.h  hash_interface.h  lr_worker.h  main.cc  main.cpp  predict.h  rdkafka_example_gt.cpp  scheduler.h  server.h  service_dump_feature.pb.cc  service_dump_feature.pb.h  worker.h
src/base/: base.h  random.h  thread_pool.h
src/c_api/: CMakeLists.txt  c_api.cc  c_api.h
src/io/: CMakeLists.txt  io.h  load_data.cc  load_data.h  load_data_from_disk.cc  (+9 more)
tracker/: cmd_run_scheduler.sh  cmd_run_server.sh  cmd_run_worker.sh  ps_run_local_cmd.sh  run_worker.sh
(+53 files in other folders)
